tests/baselines/reference/parserGreaterThanTokenAmbiguity8.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity8.ts (1 errors) ====
    1 >>/**/> 2;
            ~
!!! parserGreaterThanTokenAmbiguity8.ts(1,9): error TS1005: 'expression' expected.